# Life

./: Cargo.toml  README.md
src/: main.rs
src/life/: board.rs  cell.rs  cord.rs  game.rs  mod.rs  sdl.rs  thread.rs
